# dairlib

./: .bazelrc  .gitignore  fort.0  fort.6  snopt.out  z.csv
attic/multibody/: contact_toolkit.cc
examples/Cassie/: BUILD.bazel  cassie_test.pmd  run_dircol_walking_gait.cc  run_dircon_walking_gait.cc  run_simple_sim.cc  visualizer.cc
examples/Cassie/urdf/: cassie_fixed_springs.urdf
examples/Goldilocks_model/: BUILD.bazel  visualize_gait.cc
examples/Goldilocks_models/: BUILD.bazel  PlanarWalkerWithTorso.urdf  approx_problem_test.cc  debug_tools.cc  debug_tools.h  dummy_constraint.cc  dummy_constraint.h  dynamics_constraint.cc  dynamics_constraint.h  dynamics_constraint_at_head.cc  dynamics_constraint_at_head.h  dynamics_constraint_at_tail.cc  dynamics_constraint_at_tail.h  dynamics_expression.cc  dynamics_expression.h  dynamics_expression_test.cc  find_goldilocks_models.cc  goldilocks_model_traj_opt.cc  goldilocks_model_traj_opt.h  goldilocks_utils.cc  kinematics_constraint.cc  kinematics_constraint.h  kinematics_expression.cc  kinematics_expression.h  kinematics_expression_template_class.cc  kinematics_expression_template_class.h  kinematics_expression_template_class_test.cc  kinematics_expression_test.cc  plan_with_RoM_FoM.cc  plot_RoM.py  plot_cost.py  plot_parameter.py  plot_q.py  plot_s.py  plot_sddot.py  plot_sdot.py  plot_tau.py  scale_theta.cc  simple_traj_opt.cc  simple_traj_opt_MBP.cc  (+7 more)
examples/Goldilocks_models/data/: init_traj_input_at_knots.csv  init_traj_state_at_knots.csv  init_traj_time_at_knots.csv
examples/Goldilocks_models/find_models/: BUILD.bazel  dynamics_constraint.cc  dynamics_constraint.h  goldilocks_model_traj_opt.cc  goldilocks_model_traj_opt.h  kinematics_constraint.cc  kinematics_constraint.h  plot_RoM.py  plot_cost.py  plot_parameter.py  plot_q.py  postadd_cost_without_tau.cc  scale_theta.cc  traj_opt_given_weigths.cc  traj_opt_given_weigths.h  visualize_gait_MBP.cc  visualize_gait_RBP.cc
examples/Goldilocks_models/misc/: BUILD.bazel
examples/Goldilocks_models/misc/snopt_multithread_test/: BUILD.bazel  run_multithread.cc  run_multithread_qp.cc  run_multithread_trajopt.cc  run_sample_prog.cc  run_sample_prog.h  run_sample_qp.cc  run_sample_trajopt.cc  run_sample_trajopt.h
examples/Goldilocks_models/planning/: BUILD.bazel  FoM_guard_constraint.cc  FoM_guard_constraint.h  FoM_reset_map_constraint.cc  FoM_reset_map_constraint.h  FoM_stance_foot_constraint.cc  FoM_stance_foot_constraint.h  FoM_stance_foot_constraint_given_pos.cc  FoM_stride_length_constraint.cc  RoM_planning_traj_opt.cc  RoM_planning_traj_opt.h  RoM_traj_opt.cc  RoM_traj_opt.h  dynamics_constraint.cc  dynamics_constraint.h  kinematics_constraint.cc  kinematics_constraint.h  kinematics_constraint_cost.cc  kinematics_constraint_cost.h  kinematics_constraint_given_r.cc  kinematics_constraint_given_r.h  kinematics_constraint_only_pos.cc  kinematics_constraint_only_pos.h  visualize_FoM_pose_MBP.cc  visualize_FoM_traj_MBP.cc
examples/PlanarWalker/: BUILD.bazel  run_passive.cc  run_rbt_gait_dircon.cc  sgd_iter.cc  visualize_gait.cc
examples/goldilocks_models/: BUILD.bazel  dynamics_expression.cc  dynamics_expression.h  dynamics_expression_test.cc  find_goldilocks_models.cc  kinematics_expression.cc  kinematics_expression.h  plan_with_RoM_FoM.cc  simple_traj_opt_MBP.cc  simple_traj_opt_RBP.cc
examples/goldilocks_models/find_models/: BUILD.bazel  dynamics_constraint.cc  dynamics_constraint.h  goldilocks_model_traj_opt.cc  goldilocks_model_traj_opt.h  kinematics_constraint.cc  kinematics_constraint.h  plot_RoM.py  plot_cost.py  plot_parameter.py  scale_theta.cc  traj_opt_given_weigths.cc  traj_opt_given_weigths.h  traj_opt_helper_func.cc  visualize_gait_MBP.cc  visualize_gait_RBP.cc
examples/goldilocks_models/planning/: RoM_planning_traj_opt.cc  RoM_planning_traj_opt.h  dynamics_constraint.cc  dynamics_constraint.h  kinematics_constraint.cc  kinematics_constraint.h  kinematics_constraint_cost.cc  kinematics_constraint_cost.h  kinematics_constraint_given_r.cc  kinematics_constraint_given_r.h  kinematics_constraint_only_pos.cc  kinematics_constraint_only_pos.h  visualize_FoM_pose_MBP.cc  visualize_FoM_traj_MBP.cc
examples/simple_examples/: BUILD.bazel  autoDiff_example.cc
multibody/: multibody_utils.cc  multibody_utils.h
solvers/: optimization_utils.cc  optimization_utils.h
systems/controllers/osc/: BUILD.bazel  operational_space_control.cc  osc_tracking_data.cc  osc_tracking_data.h
systems/goldilocks_models/: file_utils.cc
systems/trajectory_optimization/: BUILD.bazel  dircon_kinematic_data.cc  dircon_kinematic_data.h  dircon_kinematic_data_set.cc  dircon_kinematic_data_set.h  dircon_opt_constraints.cc  dircon_opt_constraints.h  dircon_options.cc  dircon_options.h  dircon_position_data.cc  dircon_position_data.h  dircon_util.cc  dircon_util.h  hybrid_dircon.cc  hybrid_dircon.h  test_util.cc
systems/trajectory_optimization/dircol/: BUILD.bazel  dircol_distance_data.cc  dircol_distance_data.h  dircol_kinematic_data.cc  dircol_kinematic_data.h  dircol_kinematic_data_set.cc  dircol_kinematic_data_set.h  dircol_opt_constraints.cc  dircol_opt_constraints.h  dircol_options.cc  dircol_options.h  dircol_position_data.cc  dircol_position_data.h  dircol_test.cc  hybrid_dircol.cc  hybrid_dircol.h  kinematic_constraints_test.cc  test_util.cc
