
cc_binary(
    name = "visualize_gait",
    srcs = ["visualize_gait.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//systems/goldilocks_models",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//attic/multibody:rigid_body_tree_construction",
        "@drake//attic/multibody/parsers",
        "@drake//attic/multibody/rigid_body_plant:drake_visualizer",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)
