
cc_binary(
    name = "visualize_gait",
    srcs = ["visualize_gait.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//systems/goldilocks_models",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//attic/multibody:rigid_body_tree_construction",
        "@drake//attic/multibody/parsers",
        "@drake//attic/multibody/rigid_body_plant:drake_visualizer",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)


cc_binary(
    name = "simple_traj_opt_RBP",
    srcs = ["simple_traj_opt_RBP.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//systems/goldilocks_models",
        "//attic/systems/trajectory_optimization:dircon",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//attic/multibody:rigid_body_tree_construction",
        "@drake//attic/multibody/parsers",
        "@drake//attic/multibody/rigid_body_plant:drake_visualizer",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)

cc_binary(
    name = "simple_traj_opt_MBP",
    srcs = ["simple_traj_opt_MBP.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",     
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)


cc_library(
    name = "goldilocks_model_traj_opt",
    srcs = ["goldilocks_model_traj_opt.cc"],
    hdrs = ["goldilocks_model_traj_opt.h"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)



cc_library(
    name = "traj_opt_given_weigths",
    srcs = ["traj_opt_given_weigths.cc"],
    hdrs = ["traj_opt_given_weigths.h"],
    deps = [
        "//examples/Goldilocks_models:goldilocks_model_traj_opt",
        "//systems/goldilocks_models",
        "//common",
        "//systems/primitives",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)


cc_binary(
    name = "find_goldilocks_models",
    srcs = ["find_goldilocks_models.cc"],
    data = [
        "PlanarWalkerWithTorso.urdf",
    ],
    deps = [
        ":traj_opt_given_weigths",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)


cc_library(
    name = "kinematics_constraint",
    srcs = [
        "kinematics_constraint.cc",
    ],
    hdrs = [
        "kinematics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
    ],
)



cc_library(
    name = "dynamics_constraint",
    srcs = [
        "dynamics_constraint.cc",
    ],
    hdrs = [
        "dynamics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
    ],
)




cc_library(
    name = "kinematics_expression",
    srcs = [
        "kinematics_expression.cc",
    ],
    hdrs = [
        "kinematics_expression.h"
    ],
    deps = [
        "@drake//common",
    ],
)



cc_binary(
    name = "kinematics_expression_test",
    srcs = ["kinematics_expression_test.cc"],
    deps = [
        ":kinematics_expression",
    ],
)


cc_library(
    name = "dummy_constraint",
    srcs = [
        "dummy_constraint.cc",
    ],
    hdrs = [
        "dummy_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
    ],
)



