package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "simple_traj_opt_RBP",
    srcs = ["simple_traj_opt_RBP.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//systems/goldilocks_models",
        "//attic/systems/trajectory_optimization:dircon",
        "//solvers:optimization_utils",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//attic/multibody:rigid_body_tree_construction",
        "@drake//attic/multibody/parsers",
        "@drake//attic/multibody/rigid_body_plant:drake_visualizer",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)

cc_binary(
    name = "simple_traj_opt_MBP",
    srcs = ["simple_traj_opt_MBP.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "//solvers:optimization_utils",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",     
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)



cc_binary(
    name = "find_goldilocks_models",
    srcs = ["find_goldilocks_models.cc"],
    data = [
        "PlanarWalkerWithTorso.urdf",
    ],
    deps = [
        "//examples/Goldilocks_models/find_models:traj_opt_given_weigths",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
        "@drake//solvers:mathematical_program_lite",
        "@drake//multibody/parsing",
        ":kinematics_expression",
        ":dynamics_expression",
    ],
)

cc_binary(
    name = "plan_with_RoM_FoM",
    srcs = ["plan_with_RoM_FoM.cc"],
    data = [
        "PlanarWalkerWithTorso.urdf",
    ],
    deps = [
        "//systems/goldilocks_models",
        "//common",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
        "@drake//solvers:mathematical_program",
        "@drake//multibody/parsing",
        ":kinematics_expression",
        ":dynamics_expression",
        "//examples/Goldilocks_models/planning:RoM_planning_traj_opt",
    ],
)




cc_library(
    name = "kinematics_expression",
    srcs = [
        "kinematics_expression.cc",
    ],
    hdrs = [
        "kinematics_expression.h"
    ],
    deps = [
        "@drake//common",
        "@drake//math:gradient",
        "//multibody:utils",
    ],
)


cc_library(
    name = "dynamics_expression",
    srcs = [
        "dynamics_expression.cc",
    ],
    hdrs = [
        "dynamics_expression.h"
    ],
    deps = [
        "@drake//common",
        "@drake//math:gradient",
    ],
)


cc_binary(
    name = "kinematics_expression_test",
    srcs = ["kinematics_expression_test.cc"],
    deps = [
        ":kinematics_expression",
        "//common",
        "@drake//multibody/parsing",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",
        "@drake//systems/framework:system",
    ],
)


cc_binary(
    name = "dynamics_expression_test",
    srcs = ["dynamics_expression_test.cc"],
    deps = [
        ":dynamics_expression",
    ],
)




cc_library(
    name = "dummy_constraint",
    srcs = [
        "dummy_constraint.cc",
    ],
    hdrs = [
        "dummy_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
        "@drake//math:gradient",
    ],
)


cc_library(
    name = "goldilocks_utils",
    srcs = [
        "goldilocks_utils.cc",
    ],
    hdrs = [
        "goldilocks_utils.h"
    ],
    deps = [
        "@drake//common",
        "@drake//common/trajectories:piecewise_polynomial",
        "//systems/goldilocks_models",
    ],
)
