package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "visualize_gait_RBP",
    srcs = ["visualize_gait_RBP.cc"],
    data = glob(["examples/Goldilocks_models/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//systems/goldilocks_models",
        "@drake//attic/multibody:rigid_body_tree",
        "@drake//attic/multibody:rigid_body_tree_construction",
        "@drake//attic/multibody/parsers",
        "@drake//attic/multibody/rigid_body_plant:drake_visualizer",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
    ],
)


cc_binary(
    name = "visualize_gait_MBP",
    srcs = ["visualize_gait_MBP.cc"],
    data = glob(["examples/Goldilocks_models/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",     
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)


cc_library(
    name = "goldilocks_model_traj_opt",
    srcs = ["goldilocks_model_traj_opt.cc"],
    hdrs = ["goldilocks_model_traj_opt.h"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "//solvers:optimization_utils",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
	    "//examples/Goldilocks_models/find_models:kinematics_constraint",
	    "//examples/Goldilocks_models/find_models:dynamics_constraint",
    ],
)



cc_library(
    name = "traj_opt_given_weigths",
    srcs = ["traj_opt_given_weigths.cc"],
    hdrs = ["traj_opt_given_weigths.h"],
    deps = [
        "//examples/Goldilocks_models:goldilocks_utils",
        "//examples/Goldilocks_models:dynamics_expression",
        "//examples/Goldilocks_models/find_models:goldilocks_model_traj_opt",
        "//systems/goldilocks_models",
        "//common",
        "//systems/primitives",
        "//systems/trajectory_optimization:dircon",
        "//solvers:optimization_utils",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)
#        "@gurobi//:gurobi_cxx",


cc_library(
    name = "kinematics_constraint",
    srcs = [
        "kinematics_constraint.cc",
    ],
    hdrs = [
        "kinematics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
        "@drake//math:gradient",
        "//examples/Goldilocks_models:kinematics_expression",
    ],
)



cc_library(
    name = "dynamics_constraint",
    srcs = [
        "dynamics_constraint.cc",
    ],
    hdrs = [
        "dynamics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "//multibody:utils",
        "@drake//math:gradient",
        "//examples/Goldilocks_models:kinematics_expression",
	    "//examples/Goldilocks_models:dynamics_expression",
    ],
)


cc_binary(
    name = "scale_theta",
    srcs = ["scale_theta.cc"],
    deps = [
        "//systems/goldilocks_models",
        "//examples/Goldilocks_models:dynamics_expression",
        "@gflags",
        "@drake//common",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//multibody/parsing",
    ],
)

cc_binary(
    name = "postadd_cost_without_tau",
    srcs = ["postadd_cost_without_tau.cc"],
    deps = [
        "//systems/goldilocks_models",
        "@drake//common",
        "@gflags",
    ],
)

