cc_binary(
    name = "solve_linear_sys_test",
    srcs = ["solve_linear_sys_test.cc"],
    deps = [
        "@drake//common",
    ],
)



cc_binary(
    name = "symbolic_traj_test",
    srcs = ["symbolic_traj_test.cc"],
    deps = [
        "@drake//common",
        "@drake//solvers",
        "@drake//solvers:mathematical_program",
        "@drake//common/trajectories:piecewise_polynomial",
        "//systems/trajectory_optimization:dircon",
        "//solvers:optimization_utils",
    ],
)
