package(default_visibility = ["//visibility:public"])

cc_library(
    name = "RoM_planning_traj_opt",
    srcs = ["RoM_planning_traj_opt.cc"],
    hdrs = ["RoM_planning_traj_opt.h"],
    deps = [
        "@drake//common",
        "@drake//solvers",
        "@drake//systems/framework",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/plant:plant",
        "//examples/Goldilocks_models:kinematics_expression",
        "//examples/Goldilocks_models:dynamics_expression",
        ":kinematics_constraint",
        ":dynamics_constraint",
    ],
)

cc_library(
    name = "dynamics_constraint",
    srcs = [
        "dynamics_constraint.cc",
    ],
    hdrs = [
        "dynamics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
        "//examples/Goldilocks_models:kinematics_expression",
        "//examples/Goldilocks_models:dynamics_expression",
    ],
)

cc_library(
    name = "kinematics_constraint",
    srcs = [
        "kinematics_constraint.cc",
    ],
    hdrs = [
        "kinematics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
        "//examples/Goldilocks_models:kinematics_expression",
    ],
)


