package(default_visibility = ["//visibility:public"])

cc_library(
    name = "RoM_planning_traj_opt",
    srcs = ["RoM_planning_traj_opt.cc"],
    hdrs = ["RoM_planning_traj_opt.h"],
    deps = [
        "@drake//common",
        "@drake//solvers",
        "@drake//systems/framework",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/plant:plant",
        "//examples/Goldilocks_models:kinematics_expression",
        "//examples/Goldilocks_models:dynamics_expression",
        ":kinematics_constraint",
        ":dynamics_constraint",
        ":FoM_guard_constraint",
        ":FoM_reset_map_constraint",
        ":FoM_stance_foot_constraint",
        ":FoM_stride_length_constraint",
    ],
)

cc_library(
    name = "dynamics_constraint",
    srcs = [
        "dynamics_constraint.cc",
    ],
    hdrs = [
        "dynamics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
        "//examples/Goldilocks_models:kinematics_expression",
        "//examples/Goldilocks_models:dynamics_expression",
    ],
)

cc_library(
    name = "kinematics_constraint",
    srcs = [
        "kinematics_constraint.cc",
    ],
    hdrs = [
        "kinematics_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
        "//examples/Goldilocks_models:kinematics_expression",
    ],
)


cc_library(
    name = "FoM_guard_constraint",
    srcs = [
        "FoM_guard_constraint.cc",
    ],
    hdrs = [
        "FoM_guard_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
    ],
)

cc_library(
    name = "FoM_reset_map_constraint",
    srcs = [
        "FoM_reset_map_constraint.cc",
    ],
    hdrs = [
        "FoM_reset_map_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
    ],
)

cc_library(
    name = "FoM_stance_foot_constraint",
    srcs = [
        "FoM_stance_foot_constraint.cc",
    ],
    hdrs = [
        "FoM_stance_foot_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
    ],
)

cc_library(
    name = "FoM_stride_length_constraint",
    srcs = [
        "FoM_stride_length_constraint.cc",
    ],
    hdrs = [
        "FoM_stride_length_constraint.h"
    ],
    deps = [
        "@drake//solvers:mathematical_program",
        "@drake//solvers:constraint",
        "@drake//manipulation/util",
        "@drake//math:gradient",
        "//multibody:utils",
    ],
)


cc_binary(
    name = "visualize_FoM_pose_MBP",
    srcs = ["visualize_FoM_pose_MBP.cc"],
    data = glob(["examples/Goldilocks_models/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/goldilocks_models",
        "//systems/trajectory_optimization:dircon",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",     
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",  
    ],
)
