cc_library(
    name = "run_sample_qp",
    srcs = ["run_sample_qp.cc"],
    hdrs = ["run_sample_qp.h"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/trajectory_optimization:dircon",
        "//systems/goldilocks_models",
        "//solvers:optimization_utils",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",
    ],
)


cc_binary(
    name = "run_multithread_qp",
    srcs = ["run_multithread_qp.cc"],
    data = glob(["examples/Goldilocks_models/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//examples/Goldilocks_models/misc/snopt_multithread_test:run_sample_qp",
        "//systems/trajectory_optimization:dircon",
        "//systems/goldilocks_models",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
        "@drake//solvers:mathematical_program",
        "@drake//multibody/parsing",
    ],
)

cc_library(
    name = "run_sample_trajopt",
    srcs = ["run_sample_trajopt.cc"],
    hdrs = ["run_sample_trajopt.h"],
    deps = [
        "//common",
        "//systems/primitives",
        "//systems/trajectory_optimization:dircon",
        "//systems/goldilocks_models",
        "//solvers:optimization_utils",
        "@drake//attic/multibody/parsers",
        "@drake//common",
        "@drake//math",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@drake//multibody/parsing",
        "@drake//geometry:geometry_visualization",
        "@drake//systems/rendering:multibody_position_to_geometry_pose",
    ],
)


cc_binary(
    name = "run_multithread_trajopt",
    srcs = ["run_multithread_trajopt.cc"],
    data = glob(["examples/Goldilocks_models/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//examples/Goldilocks_models/misc/snopt_multithread_test:run_sample_trajopt",
        "//systems/trajectory_optimization:dircon",
        "//systems/goldilocks_models",
        "@drake//common",
        "@drake//lcm",
        "@drake//manipulation/util",
        "@drake//solvers",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@drake//systems/trajectory_optimization",
        "@gflags",
        "@drake//solvers:mathematical_program",
        "@drake//multibody/parsing",
    ],
)
